# TAG

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  firebase.json  firestore.rules  make_blueprint_with_planner_route.json  pyproject.toml  run.py
.firebase/: hosting.c3JjL2Zyb250ZW5kL2Rpc3Q.cache
functions/: package-lock.json  package.json  tsconfig.json
functions/functions/: package-lock.json
functions/lib/: index.js  index.js.map  test_import.js  test_import.js.map
functions/lib/connectors/: azure_custom.js  azure_custom.js.map  bitrix.js  bitrix.js.map  google.js  google.js.map
functions/lib/core/: database.js  database.js.map  logger.js  logger.js.map  scheduler.js  scheduler.js.map  security.js  security.js.map  workflowRunner.js  (+1 more)
functions/src/: index.ts  test_import.ts
openspec/: API_REFERENCE.md  ARCHITECTURE.md  DEVOPS_GUIDE.md  INFRASTRUCTURE.md  MASTER_MAPPING.md  RESEARCH_NOTES.md  SECURITY_OPS.md  SYSTEM.md  TROUBLESHOOTING.md  WORKFLOWS.md  design.md  proposal.md  spec.md  tasks.md
src/: main.py
src/api/: __init__.py
src/auto_tag_framework.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/connectors/: __init__.py  azure_custom.py  base.py  bitrix.py  google_custom.py
src/core/: config.py  database.py  logger.py  scheduler.py  security.py
src/frontend/: package-lock.json  package.json
tests/: test_azure.py  test_bitrix.py  test_core.py  test_llm.py  test_management.py  test_safety.py  test_scheduler.py
workflows/: __init__.py  control_documental.py  create_planner_tasks.py  create_pr.py  example_sync.py
(+41 files in other folders)
